fix spacing

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Scheherazade+New:wght@400;600;700&display=swap');
 
+* {
+  /* margin: 0; */
+  padding: 0;
+}
 body {
   background-color: #222;
   color: #fff;
